     lambda lists, thanks to a patch originally by Pierre Mai.
  ** The system no longer bogusly warns about "abbreviated type
     declarations".
  ** The compiler gets less confused by inlining and RETURN-FROM,
     thanks to some patches originally by Tim Moore.
  ** The system no longer hangs when dumping circular lists to fasl
     files, thanks to a patch originally from Douglas Crosher.
* Martin Atzmueller also fixed ROOM, so that it no longer fails with an
  undefined function error.
* gave up on fixing bug 3 (forbidden-by-ANSI warning for type mismatch
  in structure slot initforms) for now, documented workaround instead:-|
* fixed bug 4 (no WARNING for DECLAIM FTYPE of slot accessor function)
* fixed bug 5: added stubs for various Gray stream functions called
  in the not-a-CL:STREAM case, so that even when Gray streams aren't
  installed, at least appropriate type errors are generated
* fixed bug 8: better reporting of various PROGRAM-ERRORs
* fixed bug 9: IGNORE and IGNORABLE now work reasonably and more
  consistently in DEFMETHOD forms. 
* removed bug 21 from BUGS, since Martin Atzmueller points out that 
  it doesn't seem to affect SBCL after all
* The C runtime system now builds with better optimization and many
  fewer warnings, thanks to lots of cleanups by Martin Atzmueller.

changes in sbcl-0.6.10 relative to sbcl-0.6.9:

* A patch from Martin Atzmueller seems to have solved the SIGINT
  problem, and as far as we know, signal-handling now works cleanly.
  (If you find any new bugs, please report them!)
* More compiler warnings in src/runtime/ are gone, thanks to 
  patches from Martin Atzmueller.

planned incompatible changes in 0.7.x:
* The debugger prompt sequence now goes "5]", "5[2]", "5[3]", etc.
  as you get deeper into recursive calls to the debugger command loop,
  instead of the old "5]", "5]]", "5]]]" sequence. (I was motivated
  to do this when ILISP and SBCL got into arguments which left me
  deeply nested in the debugger.)