@@ -1190,7 +1190,7 @@ is a good idea, but see SB-SYS for blurring of boundaries."
              "!ALIEN-TYPE-COLD-INIT" "!CLASSES-COLD-INIT"
              "!EARLY-TYPE-COLD-INIT" "!LATE-TYPE-COLD-INIT"
              "!TARGET-TYPE-COLD-INIT" "!RANDOM-COLD-INIT"
-             "!FILESYS-COLD-INIT" "!READER-COLD-INIT"
+             "!READER-COLD-INIT"
              "STREAM-COLD-INIT-OR-RESET" "!LOADER-COLD-INIT"
              "!PACKAGE-COLD-INIT" "SIGNAL-COLD-INIT-OR-REINIT"
              "!SET-SANE-COOKIE-DEFAULTS" "!VM-TYPE-COLD-INIT"
