@@ -617,6 +617,12 @@ changes in sbcl-0.6.10 relative to sbcl-0.6.9:
   (If you find any new bugs, please report them!)
 * More compiler warnings in src/runtime/ are gone, thanks to 
   patches from Martin Atzmueller.
+* The compiler no longer uses special file extensions for
+  byte-compiled code. (The ANSI definition of COMPILE-FILE-PATHNAME
+  seems to require a single default extension for compiled code,
+  and there's no compelling reason to try to stretch the standard
+  to allow two different extensions.)
+* #'(SETF DOCUMENTATION) is now defined.
 
 planned incompatible changes in 0.7.x:
 * The debugger prompt sequence now goes "5]", "5[2]", "5[3]", etc.
